--- a/style/main.css
+++ b/style/main.css
@@ -79,11 +79,13 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  color: #fff;
 }
 
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  color: #fff;
 }
 
 abbr[title],
@@ -223,6 +225,7 @@ th {
 label {
   display: inline-block;
   margin-bottom: 0.5rem;
+  color: #fff;
 }
 
 button {
