--- a/style/main.css
+++ b/style/main.css
@@ -2736,7 +2736,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #fff;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -10801,7 +10801,9 @@ a.text-dark:hover, a.text-dark:focus {
   .table {
     border-collapse: collapse !important;
   }
-  .table td,
+  .table td{
+    color: #fff;
+  }
   .table th {
     background-color: #fff !important;
   }
@@ -10813,7 +10815,7 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
   }
   .table-dark th,
-  .table-dark td,
+  .table-light td,
   .table-dark thead th,
   .table-dark tbody + tbody {
     border-color: #dee2e6;
@@ -10899,6 +10901,8 @@ footer p {
 .page-home .store-trend-product {
   margin-top: 10px;
 }
+
+.product
 
 .page-details .store-heading {
   margin-bottom: 10px;
